--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "monorepolint",
+  "name": "@monorepolint/all",
   "version": "0.4.0",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "clean": "rm -rf build lib node_modules *.tgz",
     "compile:typescript": "../../node_modules/.bin/tsc",
@@ -13,7 +14,7 @@
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
-    "@monorepolint/cli": "^0.4.0",
+    "monorepolint": "^0.4.0",
     "@monorepolint/core": "^0.4.0",
     "@monorepolint/rules": "^0.4.0",
     "@monorepolint/utils": "^0.4.0"
