--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,12 @@ executors:
   node8:
     docker:
       - image: circleci/node:8.11
-  node11:
+  node10:
     docker:
-      - image: circleci/node:11.4
+      - image: circleci/node:10.13
+  node12:
+    docker:
+      - image: circleci/node:12.6
 
 workflows:
   version: 2
@@ -19,12 +22,16 @@ workflows:
           name: build_node8
           executor: node8
       - build_and_test:
-          name: build_node11
-          executor: node11
+          name: build_node10
+          executor: node10
+      - build_and_test:
+          name: build_node12
+          executor: node12
       - deploy_prerelease:
           requires:
             - build_node8
-            - build_node11
+            - build_node10
+            - build_node12
           filters:
             branches:
               only: master
@@ -34,7 +41,7 @@ jobs:
     <<: *defaults
     parameters:
       executor:
-        default: node11
+        default: node12
         type: string
     executor: "<< parameters.executor >>"
 
@@ -46,7 +53,7 @@ jobs:
   
   deploy_prerelease:
     <<: *defaults
-    executor: node11
+    executor: node12
     steps:
       - prepare
 
