--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "ts-node": "^8.0.3",
     "tslint": "^5.12.0",
     "typescript": "^3.5.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^1.2.9"
   }
 }
