--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "@types/jest-diff": "^20.0.0",
-    "@types/minimatch": "^3.0.3"
+    "@types/minimatch": "^3.0.3",
+    "@types/tmp": "^0.1.0",
+    "tmp": "^0.1.0"
   },
   "publishConfig": {
     "access": "public"
