--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -23,7 +23,9 @@
     "glob": "^7.1.3"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1"
+    "@types/glob": "^7.1.1",
+    "@types/tmp": "^0.1.0",
+    "tmp": "^0.1.0"
   },
   "publishConfig": {
     "access": "public"
