--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@monorepolint/core": "^0.4.0",
     "@monorepolint/utils": "^0.4.0",
+    "@types/yarnpkg__lockfile": "^1.1.3",
+    "@yarnpkg/lockfile": "^1.1.0",
     "globby": "^10.0.2",
     "jest-diff": "^24.9.0",
     "minimatch": "^3.0.4",
