--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "new-docs",
+  "name": "@monorepolint/docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "docusaurus start",
     "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "deploy": "docusaurus deploy",
+    "start": "docusaurus start",
+    "swizzle": "docusaurus swizzle"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.56",
