--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "lint-staged": {
     "packages/*/src/**/*.{ts,tsx}": [
       "prettier --write",
-      "tslint -c tslint.json --fix",
-      "git add"
+      "tslint -c tslint.json --fix"
     ]
   },
   "scripts": {
