--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,7 +13,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "clean": "rm -rf build lib node_modules *.tgz",
+    "clean": "rm -rf build lib node_modules *.tgz tsconfig.tsbuildinfo",
     "compile:typescript": "../../node_modules/.bin/tsc",
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
