--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -24,6 +24,7 @@
     "globby": "^11.0.1",
     "jest-diff": "^26.0.1",
     "minimatch": "^3.0.4",
+    "resolve-package-path": "^3.1.0",
     "runtypes": "^4.0.0",
     "semver": "^7.3.2"
   },
