--- a/package.json
+++ b/package.json
@@ -46,23 +46,26 @@
     "@types/jest": "^26.0.0",
     "@types/mock-fs": "^4.10.0",
     "@types/node": "^14.0.12",
-    "gh-pages": "^3.0.0",
+    "gh-pages": "^3.2.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lerna": "^3.6.0",
     "lint-staged": "^10.2.9",
     "mock-fs": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "~2.0.5",
+    "prettier": "~2.6.1",
     "ts-jest": "^26.1.0",
-    "ts-node": "^8.0.3",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.2"
+    "ts-node": "^10.7.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.6.3"
   },
   "optionalDependencies": {
-    "fsevents": "^2.1.3"
+    "fsevents": "^2.3.2"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
+  },
+  "dependencies": {
+    "@docusaurus/preset-classic": "^2.0.0-beta.18"
   }
 }
