--- a/package.json
+++ b/package.json
@@ -43,18 +43,19 @@
     "test": "lerna run test"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.0",
+    "@types/jest": "^27.4.1",
     "@types/mock-fs": "^4.10.0",
     "@types/node": "^14.0.12",
     "gh-pages": "^3.0.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "jest": "^27.5.1",
     "lerna": "^3.6.0",
     "lint-staged": "^10.2.9",
     "mock-fs": "^4.7.0",
+    "node-notifier": "^10.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "~2.0.5",
-    "ts-jest": "^26.1.0",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.2",
     "typescript": "^4.6.3"
@@ -63,6 +64,6 @@
     "fsevents": "^2.1.3"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   }
 }
