--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,7 @@
     "@monorepolint/core": "^0.4.0",
     "@monorepolint/utils": "^0.4.0",
     "chalk": "^4.1.0",
+    "tslib": "2.3.1",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
