--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -23,14 +23,13 @@
     "@monorepolint/utils": "^0.4.0",
     "globby": "^11.0.1",
     "jest-diff": "^26.0.1",
-    "minimatch": "^3.0.4",
     "resolve-package-path": "^3.1.0",
-    "runtypes": "^4.0.0",
-    "semver": "^7.3.2"
+    "runtypes": "^6.5.1",
+    "semver": "^7.3.2",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/jest-diff": "^24.3.0",
-    "@types/minimatch": "^3.0.3",
     "@types/semver": "^7.2.0",
     "@types/tmp": "^0.2.0",
     "tmp": "^0.2.1"
