--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "glob": "^7.1.3",
     "memfs": "^3.4.1",
+    "micromatch": "^4.0.5",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
+    "@types/micromatch": "^2.3.31",
     "@types/node": "^14.0.12"
   },
   "publishConfig": {
