--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ defaults: &defaults
   working_directory: ~/repo
 
 executors:
+  node16:
+    docker:
+      - image: circleci/node:16
   node14:
     docker:
       - image: circleci/node:14
@@ -16,6 +19,9 @@ workflows:
   build:
     jobs:
       - build_and_test:
+          name: build_node16
+          executor: node16
+      - build_and_test:
           name: build_node14
           executor: node14
       - build_and_test:
@@ -23,6 +29,7 @@ workflows:
           executor: node12
       - deploy_prerelease:
           requires:
+            - build_node16
             - build_node14
             - build_node12
           filters:
