--- a/package.json
+++ b/package.json
@@ -26,30 +26,31 @@
   "scripts": {
     "changelog": "rm -rf '/tmp/github-changelog-http-cache' && github_changelog_generator",
     "ci": "npm-run-all clean compile lint test",
-    "clean": "lerna run clean && rm -rf node_modules && yarn",
-    "compile": "lerna run compile:typescript",
+    "clean": "pnpm run -r clean && rm -rf node_modules && pnpm install",
+    "compile": "pnpm run -r compile:typescript",
     "compile:fast": "cd packages/all; tsc --build",
     "compile:watch": "cd packages/all; tsc --build --watch",
-    "fix:lint:monorepolint": "monorepolint fix",
+    "fix:lint:monorepolint": "pnpm exec monorepolint fix",
     "fix:lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' --write",
-    "fix:lint:typescript": "lerna run --no-bail lint:typescript -- --fix",
+    "fix:lint:typescript": "pnpm run -r --no-bail lint:typescript -- --fix",
     "lint": "npm-run-all lint:*",
     "lint:monorepolint": "monorepolint check --verbose",
     "lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l",
-    "lint:typescript": "lerna run --no-bail lint:typescript",
-    "preLernaPublish": "npm-run-all clean compile lint test",
-    "publish:release": "yarn run preLernaPublish && lerna publish --force-publish",
-    "publish:prerelease": "yarn run preLernaPublish && lerna publish --force-publish --canary minor --yes",
-    "test": "lerna run test"
+    "lint:typescript": "pnpm run -r --no-bail lint:typescript",
+    "prePublish": "npm-run-all clean compile lint test",
+    "publish:release": "pnpm run prePublish && pnpm publish --force-publish",
+    "publish:prerelease": "pnpm run prePublish && pnpm publish --force-publish --canary minor --yes",
+    "test": "pnpm run -r test"
   },
   "devDependencies": {
+    "@monorepolint/cli": "workspace:*",
+    "@monorepolint/rules": "workspace:*",
     "@types/jest": "^27.4.1",
     "@types/mock-fs": "^4.10.0",
     "@types/node": "^14.0.12",
     "gh-pages": "^3.0.0",
     "husky": "^4.2.5",
     "jest": "^27.5.1",
-    "lerna": "^3.6.0",
     "lint-staged": "^10.2.9",
     "mock-fs": "^4.7.0",
     "node-notifier": "^10.0.1",
