--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     strategy:
-      fail-fast: false,
+      fail-fast: false
       matrix: 
         node:
           - 14.19
@@ -30,3 +30,4 @@ jobs:
       run: pnpm install
     - name: run ci
       run: pnpm run ci
+
