--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches: 
-      - master
-  pull_request:
+on: [pull_request]
 
 jobs:
   build:
@@ -22,16 +18,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: pnpm/action-setup@v2.0.1
-      with:
-        version: latest-6
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
-    - name: install dependencies
-      run: pnpm install
+
+    - uses: pnpm/action-setup@v2.0.1
+      with:
+        version: latest-6
+        run_install:
+          recursive: true
+
     - name: run ci
       run: pnpm run ci
-
