--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
     - uses: pnpm/action-setup@v2.0.1
       with:
         version: latest-6
-        run_install:
-          recursive: true
+        run_install: |
+          - recursive: true
 
     - name: run ci
       run: pnpm run ci
