--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - uses: pnpm/action-setup@v2.0.1
+      with:
+        version: latest-6
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
-
-    - uses: pnpm/action-setup@v2.0.1
-      with:
-        version: latest-6
-        run_install: |
-          - recursive: true
+    
+    - run: pnpm install
 
     - name: run ci
       run: pnpm run ci
