Lets try to publish

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l",
     "lint:typescript": "pnpm run -r --no-bail lint:typescript",
     "prePublish": "npm-run-all clean compile lint test",
-    "publish:release": "pnpm run prePublish && pnpm publish --force-publish",
-    "publish:prerelease": "pnpm run prePublish && pnpm publish --force-publish --canary minor --yes",
+    "publish:release": "pnpm run prePublish && lerna publish --force-publish",
+    "publish:prerelease": "pnpm run prePublish && lerna publish --force-publish --canary minor --yes",
     "test": "pnpm run -r test"
   },
   "devDependencies": {
@@ -51,11 +51,13 @@
     "gh-pages": "^3.0.0",
     "husky": "^4.2.5",
     "jest": "^27.5.1",
+    "lerna": "^4.0.0",
     "lint-staged": "^10.2.9",
     "mock-fs": "^4.7.0",
     "node-notifier": "^10.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "~2.0.5",
+    "semver": "^7.3.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.2",
