--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepolint",
+  "name": "@monorepolint/root",
   "author": "Eric L Anderson (https://github.com/ericanderson)",
   "contributors": [
     "Mac Lockard (https://github.com/maclockard)"
