--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepolint/core",
+  "name": "@monorepolint/config",
   "version": "0.4.0",
   "author": "Eric L Anderson (https://github.com/ericanderson)",
   "contributors": [
@@ -20,7 +20,6 @@
     "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch"
   },
   "dependencies": {
-    "@monorepolint/config": "^0.4.0",
     "@monorepolint/utils": "^0.4.0",
     "camelcase": "^6.0.0",
     "chalk": "^4.1.0",
