--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,32 +6,40 @@
     "Mac Lockard (https://github.com/maclockard)"
   ],
   "license": "MIT",
-  "bin": {
-    "monorepolint": "./bin/monorepolint",
-    "mrl": "./bin/mrl"
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./build/types/index.d.ts",
+      "import": "./build/js/index.js",
+      "require": "./build/js/index.cjs"
+    }
   },
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "bin": {
+    "monorepolint": "./bin/monorepolint.cjs",
+    "mrl": "./bin/mrl.cjs"
+  },
   "scripts": {
-    "clean": "rm -rf build lib node_modules *.tgz tsconfig.tsbuildinfo",
-    "compile:typescript": "../../node_modules/.bin/tsc",
+    "clean": "rm -rf build dist lib node_modules *.tgz tsconfig.tsbuildinfo",
+    "compile-typescript": "../../node_modules/.bin/tsc --build",
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
     "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
-    "test": "../../node_modules/.bin/jest --colors --passWithNoTests",
-    "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch"
+    "test": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests --watch",
+    "transpile-typescript": "tsup --config ../../tsup.config.cjs"
   },
   "dependencies": {
     "@monorepolint/config": "^0.4.0",
     "@monorepolint/core": "^0.4.0",
     "@monorepolint/utils": "^0.4.0",
-    "chalk": "^4.1.0",
+    "chalk": "^5.1.2",
     "tslib": "2.3.1",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
-    "@types/yargs": "^17.0.13"
+    "@types/yargs": "17.0.10",
+    "tsup": "^6.5.0"
   },
   "publishConfig": {
     "access": "public"
