--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -3,20 +3,23 @@
   "version": "0.4.0",
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf build lib node_modules *.tgz tsconfig.tsbuildinfo",
-    "compile:typescript": "../../node_modules/.bin/tsc",
+    "clean": "rm -rf build dist lib node_modules *.tgz tsconfig.tsbuildinfo",
+    "compile-typescript": "../../node_modules/.bin/tsc --build",
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
     "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
-    "test": "../../node_modules/.bin/jest --colors --passWithNoTests",
-    "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch"
+    "test": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests --watch"
   },
   "dependencies": {
     "@monorepolint/cli": "^0.4.0",
     "@monorepolint/core": "^0.4.0",
     "@monorepolint/rules": "^0.4.0",
     "@monorepolint/utils": "^0.4.0"
+  },
+  "devDependencies": {
+    "tsup": "^6.5.0"
   },
   "publishConfig": {
     "access": "public"
