--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,28 +7,38 @@
   ],
   "url": "https://github.com/monorepolint/monorepolint",
   "license": "MIT",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./build/types/index.d.ts",
+      "import": "./build/js/index.js",
+      "require": "./build/js/index.cjs",
+      "default": "./build/js/index.js"
+    }
+  },
   "scripts": {
-    "clean": "rm -rf build lib node_modules *.tgz tsconfig.tsbuildinfo",
-    "compile:typescript": "../../node_modules/.bin/tsc",
+    "clean": "rm -rf build dist lib node_modules *.tgz tsconfig.tsbuildinfo",
+    "compile-typescript": "../../node_modules/.bin/tsc --build",
     "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
-    "test": "../../node_modules/.bin/jest --colors --passWithNoTests",
-    "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch"
+    "test": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests --watch",
+    "transpile-typescript": "tsup --config ../../tsup.config.cjs"
   },
   "dependencies": {
-    "@pnpm/find-workspace-dir": "^3.0.3",
-    "@pnpm/find-workspace-packages": "^3.1.42",
-    "@pnpm/logger": "^4.0.0",
+    "find-packages": "^10.0.4",
+    "find-up": "^6.3.0",
     "glob": "^7.1.3",
-    "micromatch": "^4.0.5",
+    "minimatch": "^5.1.1",
+    "read-yaml-file": "^2.1.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/find-up": "^4.0.0",
     "@types/glob": "^7.1.1",
-    "@types/micromatch": "^2.3.31",
-    "@types/node": "^14.0.12"
+    "@types/minimatch": "^5.1.2",
+    "@types/node": "^18.11.11",
+    "tsup": "^6.5.0"
   },
   "publishConfig": {
     "access": "public"
