--- a/package.json
+++ b/package.json
@@ -18,24 +18,21 @@
     ]
   },
   "scripts": {
-    "//compile-types": "tsc --build packages/all",
     "changelog": "rm -rf '/tmp/github-changelog-http-cache' && github_changelog_generator",
-    "ci": "npm-run-all clean compile lint test",
-    "clean": "pnpm run -r clean && rm -rf node_modules && pnpm install",
-    "compile": "pnpm run -r compile:typescript",
+    "ci": "turbo clean && turbo check",
+    "clean": "turbo clean && rm -rf node_modules && pnpm install",
+    "build": "turbo build",
     "compile:fast": "cd packages/all; tsc --build",
     "compile:watch": "cd packages/all; tsc --build --watch",
     "fix:lint:monorepolint": "pnpm exec monorepolint fix",
     "fix:lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' --write",
-    "fix:lint:typescript": "pnpm run -r --no-bail lint:typescript -- --fix",
     "lint": "npm-run-all lint:*",
     "lint:monorepolint": "monorepolint check --verbose",
     "lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l",
-    "lint:typescript": "pnpm run -r --no-bail lint:typescript",
-    "prePublish": "npm-run-all clean compile lint test",
+    "prePublish": "turbo clean && turbo check",
     "publish:release": "pnpm run prePublish && lerna publish --no-verify-access --force-publish",
     "publish:prerelease": "pnpm run prePublish && lerna publish --no-verify-access --force-publish --canary minor --yes",
-    "test": "pnpm run -r test",
+    "test": "turbo test",
     "prepare": "husky install"
   },
   "devDependencies": {
