--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "scripts": {
+    "check-mrl": "mrl check --verbose",
     "changelog": "rm -rf '/tmp/github-changelog-http-cache' && github_changelog_generator",
     "ci": "turbo clean && turbo check",
     "clean": "turbo clean && rm -rf node_modules && pnpm install",
@@ -38,7 +39,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@monorepolint/cli": "workspace:*",
-    "@monorepolint/rules": "workspace:*",
+    "@monorepolint/internal-mrl-config": "workspace:*",
     "@types/jest": "^27.4.1",
     "@types/mock-fs": "^4.10.0",
     "@types/node": "^18.11.11",
@@ -50,11 +51,10 @@
     "mock-fs": "^4.7.0",
     "node-notifier": "^10.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "~2.0.5",
+    "prettier": "^2.8.0",
     "semver": "^7.3.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "tslint": "^6.1.2",
     "turbo": "^1.6.3",
     "typescript": "^4.9.3"
   },
