--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf build dist lib node_modules *.tgz tsconfig.tsbuildinfo",
-    "compile-typescript": "../../node_modules/.bin/tsc --build",
-    "test": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests --watch"
+    "compile-typescript": "tsc --build",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --colors --passWithNoTests",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --colors --passWithNoTests --watch"
   },
   "dependencies": {
     "@monorepolint/cli": "^0.4.0",
@@ -15,7 +15,12 @@
     "@monorepolint/utils": "^0.4.0"
   },
   "devDependencies": {
-    "tsup": "^6.5.0"
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3",
+    "@types/jest": "^27.4.1",
+    "prettier": "^2.8.0",
+    "ts-jest": "^29.0.3",
+    "jest": "^29.3.1"
   },
   "publishConfig": {
     "access": "public"
