--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -17,9 +17,9 @@
   },
   "scripts": {
     "clean": "rm -rf build dist lib node_modules *.tgz tsconfig.tsbuildinfo",
-    "compile-typescript": "../../node_modules/.bin/tsc --build",
-    "test": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules ../../node_modules/.bin/jest --colors --passWithNoTests --watch",
+    "compile-typescript": "tsc --build",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --colors --passWithNoTests",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --colors --passWithNoTests --watch",
     "transpile-typescript": "tsup --config ../../tsup.config.cjs"
   },
   "dependencies": {
@@ -30,7 +30,12 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "tsup": "^6.5.0"
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3",
+    "@types/jest": "^27.4.1",
+    "prettier": "^2.8.0",
+    "ts-jest": "^29.0.3",
+    "jest": "^29.3.1"
   },
   "publishConfig": {
     "access": "public"
