--- a/packages/internal-mrl-config/package.json
+++ b/packages/internal-mrl-config/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "@monorepolint/rules",
+  "name": "@monorepolint/internal-mrl-config",
   "version": "0.4.0",
   "author": "Eric L Anderson (https://github.com/ericanderson)",
-  "contributors": [
-    "Mac Lockard (https://github.com/maclockard)"
-  ],
-  "url": "https://github.com/monorepolint/monorepolint",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -23,20 +19,13 @@
     "transpile-typescript": "tsup --config ../../tsup.config.cjs"
   },
   "dependencies": {
-    "@monorepolint/config": "^0.4.0",
-    "@monorepolint/core": "^0.4.0",
-    "@monorepolint/utils": "^0.4.0",
-    "globby": "^13.1.2",
-    "jest-diff": "^29.3.1",
-    "resolve-package-path": "^4.0.3",
-    "runtypes": "^6.6.0",
-    "semver": "^7.3.8",
-    "tslib": "^2.3.1"
+    "@monorepolint/config": "workspace:*",
+    "@monorepolint/core": "workspace:*",
+    "@monorepolint/rules": "workspace:*",
+    "@monorepolint/utils": "workspace:*",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@types/semver": "^7.2.0",
-    "@types/tmp": "^0.2.0",
-    "tmp": "^0.2.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3",
     "@types/jest": "^27.4.1",
