--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,13 +34,14 @@
     "yargs": "^17.6.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.4",
     "@types/yargs": "17.0.10",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
-    "@types/jest": "^27.4.1",
+    "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
-    "jest": "^29.3.1"
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3",
+    "tslib": "^2.4.1"
   },
   "publishConfig": {
     "access": "public"
