--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -30,12 +30,13 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
-    "jest": "^29.3.1"
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3",
+    "tslib": "^2.4.1"
   },
   "publishConfig": {
     "access": "public"
