--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,6 +18,14 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
+  "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3",
+    "tslib": "^2.4.1"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -29,12 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^4.9.3",
-    "@types/jest": "^27.4.1",
-    "prettier": "^2.8.0",
-    "ts-jest": "^29.0.3",
-    "jest": "^29.3.1"
   }
 }
