--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -34,15 +34,16 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.4",
     "@types/semver": "^7.3.13",
     "@types/tmp": "^0.2.3",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.0",
     "tmp": "^0.2.1",
+    "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3",
-    "@types/jest": "^27.4.1",
-    "prettier": "^2.8.0",
-    "ts-jest": "^29.0.3",
-    "jest": "^29.3.1"
+    "tslib": "^2.4.1"
   },
   "publishConfig": {
     "access": "public"
