--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -33,14 +33,15 @@
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
+    "@types/jest": "^29.2.4",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^18.11.11",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
-    "@types/jest": "^27.4.1",
+    "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
-    "jest": "^29.3.1"
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3",
+    "tslib": "^2.4.1"
   },
   "publishConfig": {
     "access": "public"
