--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "check-mrl": "mrl check --verbose",
     "changelog": "rm -rf '/tmp/github-changelog-http-cache' && github_changelog_generator",
-    "ci": "turbo clean && turbo check",
+    "ci": "pnpm clean && turbo check",
     "clean": "turbo clean && rm -rf node_modules && pnpm install",
     "build": "turbo build",
     "compile:fast": "cd packages/all; tsc --build",
