Jest almost working again

--- a/packages/all/tsconfig.json
+++ b/packages/all/tsconfig.json
@@ -6,12 +6,21 @@
     "declarationDir": "./build/types",
     "tsBuildInfoFile": "./build/tsconfig.tsbuildinfo"
   },
+  "include": [
+    "src"
+  ],
   "references": [
     {
       "path": "../cli"
     },
     {
+      "path": "../config"
+    },
+    {
       "path": "../core"
+    },
+    {
+      "path": "../internal-mrl-config"
     },
     {
       "path": "../rules"
