--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "turbo": "^1.6.3",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "@swc/core": "^1.3.21",
+    "@swc/jest": "^0.2.23"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
