--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@monorepolint/cli": "workspace:*",
+    "@monorepolint/config": "workspace:*",
     "@monorepolint/core": "workspace:*",
-    "@monorepolint/rules": "workspace:*",
     "@monorepolint/internal-mrl-config": "workspace:*",
-    "@monorepolint/utils": "workspace:*",
-    "@monorepolint/config": "workspace:*"
+    "@monorepolint/rules": "workspace:*",
+    "@monorepolint/utils": "workspace:*"
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3",
-    "tslib": "^2.4.1"
+    "@jest/globals": "^29.3.1"
   },
   "publishConfig": {
     "access": "public"
