--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,13 +31,14 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/jest": "^29.2.4",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
-    "tslib": "^2.4.1"
+    "typescript": "^4.9.3"
   },
   "publishConfig": {
     "access": "public"
