--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -24,8 +24,9 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.3",
-    "tslib": "^2.4.1"
+    "@jest/globals": "^29.3.1"
   },
   "browserslist": {
     "production": [
