--- a/packages/internal-mrl-config/package.json
+++ b/packages/internal-mrl-config/package.json
@@ -30,9 +30,10 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3",
-    "tslib": "^2.4.1"
+    "@jest/globals": "^29.3.1"
   },
   "publishConfig": {
     "access": "public"
