--- a/packages/internal-mrl-config/tsconfig.json
+++ b/packages/internal-mrl-config/tsconfig.json
@@ -6,6 +6,9 @@
     "declarationDir": "./build/types",
     "tsBuildInfoFile": "./build/tsconfig.tsbuildinfo"
   },
+  "include": [
+    "src"
+  ],
   "references": [
     {
       "path": "../config"
