--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -34,6 +34,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/jest": "^29.2.4",
     "@types/semver": "^7.3.13",
     "@types/tmp": "^0.2.3",
@@ -41,9 +42,9 @@
     "prettier": "^2.8.0",
     "tmp": "^0.2.1",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
-    "tslib": "^2.4.1"
+    "typescript": "^4.9.3"
   },
   "publishConfig": {
     "access": "public"
