--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -32,6 +32,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/glob": "^8.0.0",
     "@types/jest": "^29.2.4",
     "@types/minimatch": "^5.1.2",
@@ -39,9 +40,9 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
-    "tslib": "^2.4.1"
+    "typescript": "^4.9.3"
   },
   "publishConfig": {
     "access": "public"
