--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -6,5 +6,8 @@
     "declarationDir": "./build/types",
     "tsBuildInfoFile": "./build/tsconfig.tsbuildinfo"
   },
+  "include": [
+    "src"
+  ],
   "references": []
 }
