--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -4,12 +4,12 @@
   "license": "MIT",
   "scripts": {},
   "dependencies": {
-    "@monorepolint/cli": "workspace:*",
-    "@monorepolint/config": "workspace:*",
-    "@monorepolint/core": "workspace:*",
-    "@monorepolint/internal-mrl-config": "workspace:*",
-    "@monorepolint/rules": "workspace:*",
-    "@monorepolint/utils": "workspace:*"
+    "@monorepolint/cli": "^0.4.0",
+    "@monorepolint/config": "^0.4.0",
+    "@monorepolint/core": "^0.4.0",
+    "@monorepolint/internal-mrl-config": "^0.4.0",
+    "@monorepolint/rules": "^0.4.0",
+    "@monorepolint/utils": "^0.4.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
