--- a/packages/internal-mrl-config/package.json
+++ b/packages/internal-mrl-config/package.json
@@ -20,10 +20,10 @@
     "transpile-typescript": "tsup --config ../../tsup.config.cjs"
   },
   "dependencies": {
-    "@monorepolint/config": "workspace:*",
-    "@monorepolint/core": "workspace:*",
-    "@monorepolint/rules": "workspace:*",
-    "@monorepolint/utils": "workspace:*",
+    "@monorepolint/config": "^0.4.0",
+    "@monorepolint/core": "^0.4.0",
+    "@monorepolint/rules": "^0.4.0",
+    "@monorepolint/utils": "^0.4.0",
     "tslib": "2.3.1"
   },
   "devDependencies": {
