--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -2,6 +2,15 @@
   "name": "monorepolint",
   "version": "0.4.0",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "types": "./build/types/index.d.ts",
+      "import": "./build/js/index.js"
+    }
+  },
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {},
   "dependencies": {
     "@monorepolint/cli": "^0.4.0",
