--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,13 +10,15 @@
   "exports": {
     ".": {
       "types": "./build/types/index.d.ts",
-      "import": "./build/js/index.js",
-      "require": "./build/js/index.cjs"
+      "import": "./build/js/index.js"
     }
   },
+  "engines": {
+    "node": ">=16"
+  },
   "bin": {
-    "monorepolint": "./bin/monorepolint.cjs",
-    "mrl": "./bin/mrl.cjs"
+    "monorepolint": "./bin/monorepolint.mjs",
+    "mrl": "./bin/mrl.mjs"
   },
   "scripts": {
     "clean": "rm -rf build dist lib node_modules *.tgz tsconfig.tsbuildinfo",
