--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,7 +1,16 @@
 {
   "name": "@monorepolint/docs",
   "version": "0.0.0",
+  "exports": {
+    ".": {
+      "types": "./build/types/index.d.ts",
+      "import": "./build/js/index.js"
+    }
+  },
   "private": true,
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "build-docs": "docusaurus build",
     "clear": "docusaurus clear",
