--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "es2020",
+    "target": "ES2021",
+    "module": "Node16",
     "lib": ["ES2021"],
     "moduleResolution": "Node16",
     "declaration": true,
