Remove back compat and make things clean

--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -12,6 +12,10 @@
     ".": {
       "types": "./build/types/index.d.ts",
       "import": "./build/js/index.js"
+    },
+    "./util": {
+      "types": "./build/types/public/util.d.ts",
+      "import": "./build/js/public/util.js"
     }
   },
   "engines": {
