Auto export from the public dir

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,6 +11,10 @@
     ".": {
       "types": "./build/types/index.d.ts",
       "import": "./build/js/index.js"
+    },
+    "./*": {
+      "types": "./build/types/public/*.d.ts",
+      "import": "./build/js/public/*.js"
     }
   },
   "engines": {
