--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -13,9 +13,9 @@
       "types": "./build/types/index.d.ts",
       "import": "./build/js/index.js"
     },
-    "./util": {
-      "types": "./build/types/public/util.d.ts",
-      "import": "./build/js/public/util.js"
+    "./*": {
+      "types": "./build/types/public/*.d.ts",
+      "import": "./build/js/public/*.js"
     }
   },
   "engines": {
