--- a/packages/internal-mrl-config/package.json
+++ b/packages/internal-mrl-config/package.json
@@ -8,6 +8,10 @@
     ".": {
       "types": "./build/types/index.d.ts",
       "import": "./build/js/index.js"
+    },
+    "./*": {
+      "types": "./build/types/public/*.d.ts",
+      "import": "./build/js/public/*.js"
     }
   },
   "engines": {
