--- a/package.json
+++ b/package.json
@@ -52,7 +52,14 @@
     "semver": "^7.6.0",
     "ts-jest": "^29.1.2",
     "turbo": "^1.13.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@eslint/js": "^9.1.1",
+    "typescript-eslint": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^9.1.1",
+    "globals": "^15.0.0"
+
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
