--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@monorepolint/cli": "^0.4.0",
-    "@monorepolint/internal-mrl-config": "^0.4.0",
+    "@monorepolint/cli": "workspace:^",
+    "@monorepolint/internal-mrl-config": "workspace:*",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^18.18.14",
     "gh-pages": "^6.1.1",
@@ -51,7 +51,7 @@
     "prettier": "^3.2.5",
     "semver": "^7.6.0",
     "ts-jest": "^29.1.2",
-    "turbo": "^1.13.2",
+    "turbo": "^1.13.3",
     "typescript": "^5.4.5",
     "@eslint/js": "^9.1.1",
     "typescript-eslint": "^7.7.1",
@@ -59,14 +59,13 @@
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^9.1.1",
     "globals": "^15.0.0"
-
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
   },
   "engines": {
     "node": ">=16",
-    "pnpm": ">=8"
+    "pnpm": ">=9.0.6"
   },
-  "packageManager": "pnpm@8"
+  "packageManager": "pnpm@9.0.6"
 }
